objects/SubProjectSite__c.object
<CustomObject>
    <description>Junction object to allow associating multiple Sites (Accounts) with a SubProject.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SubProject Sites</relationshipLabel>
        <relationshipName>SubProjectSites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>CMF_Name__r.Ship_CMF_Business_Unit__c</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMF_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CMF Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMF_Info__c.Status__c</field>
                <operation>equals</operation>
                <value>A</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMF_Info__c</referenceTo>
        <relationshipLabel>SubProjectSites</relationshipLabel>
        <relationshipName>SubProjectSites</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMF_Numbers__c</fullName>
        <label>CMF Number(s)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTI_Desktop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CTI Desktop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DTA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dealer Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SubProjectSites (Dealer Group)</relationshipLabel>
        <relationshipName>SubProjectSites_DealerGroup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FES_Details__c</fullName>
        <label>FES Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Account__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Telephony__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP Telephony</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logon_Access__c</fullName>
        <label>Logon Access</label>
        <picklist>
            <picklistValues>
                <fullName>90-day free default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited Access Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not needed for this project type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>New_CMF__c</fullName>
        <label>New CMF#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_C__c</fullName>
        <label>New C#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Dealer_Code__c</fullName>
        <label>New Dealer Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_GL_CO__c</fullName>
        <label>New GL CO#</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Hosting__c</fullName>
        <label>New Hosting</label>
        <picklist>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_IP_Address__c</fullName>
        <label>New IP Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Location__c</fullName>
        <label>New Location</label>
        <picklist>
            <picklistValues>
                <fullName>Elk Grove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ann Arbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Logons__c</fullName>
        <label>New Logons</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Manufacturer__c</fullName>
        <label>New Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Platform__c</fullName>
        <label>New Platform</label>
        <picklist>
            <picklistValues>
                <fullName>CDK CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK DriveXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>w.e.b.Suite 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>w.e.b.Suite 200*</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Server_URL_CDK_CRM__c</fullName>
        <label>New Server URL (CDK CRM)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Server_URL_CDK_Vehicle__c</fullName>
        <label>New Server URL (CDK Vehicle)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_DL_Scanners__c</fullName>
        <label>Number of DL Scanners</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEM_Integration__c</fullName>
        <label>OEM Integration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_CMF__c</fullName>
        <label>Old CMF#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_C__c</fullName>
        <label>Old C#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Dealer_Code__c</fullName>
        <label>Old Dealer Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_GL_CO__c</fullName>
        <label>Old GL CO#</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Hosting__c</fullName>
        <label>Old Hosting</label>
        <picklist>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Old_IP_Address__c</fullName>
        <label>Old IP Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Location__c</fullName>
        <label>Old Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Logons__c</fullName>
        <label>Old Logons</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Manufacturer__c</fullName>
        <label>Old Manufacturer</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Platform__c</fullName>
        <label>Old Platform</label>
        <picklist>
            <picklistValues>
                <fullName>CDK CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK DriveXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>w.e.b.Suite 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>w.e.b.Suite 200*</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PD__c</fullName>
        <description>Premium Dealer flag value from the associated account on a particular subProject Site record</description>
        <formula>Account__r.Premier_Dealer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Account__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>SubProjectSites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMS_Request_Ids__c</fullName>
        <label>RMS Request Ids</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ship_CMF__c</fullName>
        <formula>CMF_Name__r.Ship_CMF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship CMF #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <formula>Account__r.BillingState</formula>
        <label>State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_Name__c</fullName>
        <formula>SubProject__r.SubProject_Name__c</formula>
        <label>SubProject Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_Name_from_RMS__c</fullName>
        <label>SubProject Name from RMS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject__c</fullName>
        <label>SubProject</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>SubProjectSites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>ACST - Australian Central Std Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEST - Australian Eastern Std Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKST - Alaska Std Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATL - Atlantic Std Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWST - Australian Western Std Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ChST - Guam Std Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST - Central Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EST - Eastern Std Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAST - Hawaii Std Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MST - Mountain Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NST - Nfld Std Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST - Pacific Standard Time</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>Account__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <formula>Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <label>SubProjectSite</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SubProject__c</columns>
        <columns>NAME</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Ship_CMF__c</columns>
        <columns>CMF_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Dealer_Group__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Time_Zone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SPS-{000000000}</displayFormat>
        <label>SubProjectSite ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SubProjectSites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>New_CMF_Number_Is_Numeric</fullName>
        <active>true</active>
        <description>New CMF # can have only numeric values</description>
        <errorConditionFormula>NOT(ISNUMBER(New_CMF__c)) &amp;&amp; NOT(ISBLANK(New_CMF__c)) &amp;&amp; NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c))</errorConditionFormula>
        <errorDisplayField>New_CMF__c</errorDisplayField>
        <errorMessage>New CMF# field should contain only numeric values.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Old_CMF_Number_Is_Numeric</fullName>
        <active>true</active>
        <description>Old CMF # can have only numeric values</description>
        <errorConditionFormula>NOT(ISNUMBER(Old_CMF__c)) &amp;&amp; NOT(ISBLANK(Old_CMF__c)) &amp;&amp; NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c))</errorConditionFormula>
        <errorDisplayField>Old_CMF__c</errorDisplayField>
        <errorMessage>Old CMF# field should contain only numeric values.</errorMessage>
    </validationRules>
</CustomObject>